--- a/.gitignore
+++ b/.gitignore
@@ -45,12 +45,16 @@ captures/
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
 #*.jks
+*.aab
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
+
+# Google Developer API Key
+api-5146002300548282708-397628-4a7c8d6b9073.json
 
 # Freeline
 freeline.py
