--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,9 @@ captures/
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
-#*.jks
+*.jks
 *.aab
+signing.properties
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
