adding creds to build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,40 @@ jobs:
       - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Get google-services.json
+          command: echo $GOOGLE_SERVICES | base64 -di > app/google-services.json
+      - run:
+          name: Get api-5146002300548282708-397628-4a7c8d6b9073.json
+          command: echo $PLAY_DEVELOPER_API_KEY | base64 -di > app/api-5146002300548282708-397628-4a7c8d6b9073.json
+      - run:
+          name: Get keystore.jks
+          command: echo $KEYSTORE | base64 -di > app/keystore.jks
+      - run:
+          name: Get signing.properties
+          command: echo $SIGNING_PROPERTIES | base64 -di > signing.properties
+      - run:
+          name: Run Tests
+          command: ./gradlew lint test
+      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+          path: app/build/reports
+          destination: reports
+      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: app/build/test-results
+
+  deploy-internal:
+    <<: *defaults
+    steps:
+      - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
           name: Install fastlane dependencies
           command: gem update --system && gem install bundler
       - run:
@@ -41,3 +75,16 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }} 
+
+workflows:
+  version: 2
+  deploy-internal:
+    jobs:
+      - build
+      - hold:
+          type: approval
+          requires:
+            - build
+      - deploy-internal:
+          requires:
+            - hold
